--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ android {
             }
         }
         debug {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            //shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
 
@@ -107,4 +107,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     api 'com.just.agentweb:agentweb:4.0.3-beta'
     implementation 'com.github.forvv231:EasyNavigation:1.0.3'
+    //右滑返回上一页
+    implementation 'me.imid.swipebacklayout.lib:library:1.1.0'
 }
