--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,18 +24,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="UnusedAttribute">
+        <activity android:name=".activity.MobileActivity"></activity>
+        <activity
+            android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.MainActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activity.SearchActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activity.AlbumActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activity.SplashActivity"
             android:screenOrientation="portrait"
