加入歌友界面。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="UnusedAttribute">
+        <activity android:name=".activity.LrcActivity"></activity>
         <activity
             android:name=".activity.WebActivity"
             android:configChanges="orientation|screenSize"
