--- a/app/build.gradle
+++ b/app/build.gradle
@@ -158,7 +158,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.gyf.immersionbar:immersionbar:2.3.2-beta03'
     //对话框
-    implementation 'com.github.andyxialm:ColorDialog:1.0.0'
+    implementation 'com.github.HanHuoBin:BaseDialog:1.2.0'
     implementation project(path: ':imagepicker')
     implementation project(path: ':zxinglibrary')
     //刷新
