--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
         android:theme="@style/AppTheme"
         tools:ignore="UnusedAttribute">
         <activity
+            android:name=".activity.LocalMusicActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activity.NoticeDetailActivity"
             android:screenOrientation="portrait" />
         <activity
