--- a/app/build.gradle
+++ b/app/build.gradle
@@ -184,4 +184,7 @@ dependencies {
     implementation 'com.jude:easyrecyclerview:4.2.3'
     //高亮引导
     implementation 'com.isanwenyu.highlight:highlight:1.8.0'
+    //orm数据库
+    implementation 'com.j256.ormlite:ormlite-android:4.48'
+    implementation 'com.j256.ormlite:ormlite-core:4.48'
 }
