--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,10 +14,10 @@ MobSDK {
     ShareSDK {
         //平台配置信息
         devInfo {
-            Wechat {//微信
+           /* Wechat {//微信暂不提供
                 appId "wx4868b35061f87885"
                 appSecret "64020361b8ec4c99936c0e3999a9f249"
-            }
+            }*/
             QQ {//QQ
                 appId "101573654"
                 appKey "cc25df73eccb9c19b800e9cb3bc4c647"
@@ -90,8 +90,8 @@ android {
             }
         }
         debug {
-            minifyEnabled false
-            //shrinkResources true
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
 
