--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -172,9 +172,15 @@
         <service
             android:name=".service.MusicService"
             android:enabled="true"
-            android:exported="true" /> <!-- 接受消息服务 -->
-        <service android:name=".service.AcceptMessageService" />
-        <service android:name=".service.AcceptApplyService" />
+            android:exported="false" /> <!-- 接受消息服务 -->
+        <service
+            android:name=".service.AcceptMessageService"
+            android:enabled="true"
+            android:exported="false" />
+        <service
+            android:name=".service.AcceptApplyService"
+            android:enabled="true"
+            android:exported="false" />
 
         <activity
             android:name=".activity.LauncherActivity"
