--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="UnusedAttribute">
-        <activity android:name=".activity.TxChatActivity"></activity>
+        <activity
+            android:name=".activity.FriendDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.TxChatActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.WifiActivity"
             android:screenOrientation="portrait" />
