--- a/app/build.gradle
+++ b/app/build.gradle
@@ -186,5 +186,5 @@ dependencies {
     implementation 'com.j256.ormlite:ormlite-android:4.48'
     implementation 'com.j256.ormlite:ormlite-core:4.48'
     //腾讯IM
-    implementation 'com.tencent.imsdk:tuikit:4.6.51'
+    //implementation 'com.tencent.imsdk:tuikit:4.6.51'
 }
