--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="UnusedAttribute">
+        <activity android:name=".activity.DrawerActivity"></activity>
         <activity
             android:name=".activity.NoticeActivity"
             android:screenOrientation="portrait" />
